Added step response and calculating eigenvalues to SISOAnalyzer.

--- a/notebooks/lti_crn_networks.ipynb
+++ b/notebooks/lti_crn_networks.ipynb
@@ -154,6 +154,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "d241358d-c918-4486-99a6-b62ca85e02db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1.2607,   0.    ,   0.    ,   0.    ,   0.    ,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  0.    ,  -1.059 ,   0.    ,   0.    ,   0.    ,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  0.    ,   1.0286, -14.0679,   3.0208,   6.9311,   1.7326,\n",
+       "          0.    ],\n",
+       "       [  1.4724,   0.    ,   3.3392,  -6.4247,   2.5701,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  1.4724,   4.7199,   0.    ,   0.    ,  -9.4911,   3.1463,\n",
+       "          0.6854],\n",
+       "       [  3.503 ,   1.6341,   0.    ,   0.    ,   5.9061,  -8.6818,\n",
+       "          0.3427],\n",
+       "       [  0.7699,   0.    ,   1.6696,   1.5104,   2.3909,   0.    ,\n",
+       "         -6.1623]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "JACOBIAN_ARR = analyzer.jacobian_df.values\n",
+    "JACOBIAN_ARR"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "fd387017-4faf-4273-9be8-b395157fc765",
    "metadata": {},
@@ -282,6 +317,144 @@
    "source": [
     "tf_smat = analyzer.transfer_function_smat\n",
     "tf_smat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe58d109-80c0-438d-a98b-ee455c469b9c",
+   "metadata": {},
+   "source": [
+    "# Solving a linear system for steady state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "993af9ee-75ce-4af4-ad28-e123eeed72fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: [1.00000000e+00 7.13885043e-17 4.39166992e-01 6.31663040e-01\n",
+      " 4.35539128e-01 7.22188831e-01 5.67730809e-01]\n",
+      "Residual: 5.96e-15\n",
+      "Rank: 6\n",
+      "Verification A @ x = [ 0.00000000e+00 -7.56004260e-17  0.00000000e+00  1.77635684e-15\n",
+      "  0.00000000e+00  3.55271368e-15 -4.44089210e-15]\n",
+      "Target b = [0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def solve_linear_system(A, b, fixed=None):\n",
+    "    \"\"\"\n",
+    "    Solve Ax = b in the least-squares sense, with optional fixed coordinates.\n",
+    "    \n",
+    "    Args:\n",
+    "        A: matrix (m x n)\n",
+    "        b: right-hand side vector (length m)\n",
+    "        fixed: dict mapping coordinate index -> fixed value\n",
+    "               e.g., {0: 1.5, 3: 0.0} fixes x[0]=1.5 and x[3]=0.0\n",
+    "    \n",
+    "    Returns:\n",
+    "        x: solution\n",
+    "        residual: norm of (Ax - b)\n",
+    "        rank: effective rank of the (reduced) system\n",
+    "    \"\"\"\n",
+    "    A = np.asarray(A, dtype=float)\n",
+    "    b = np.asarray(b, dtype=float)\n",
+    "    n = A.shape[1]\n",
+    "    \n",
+    "    if fixed is None:\n",
+    "        fixed = {}\n",
+    "    \n",
+    "    # Identify free vs fixed indices\n",
+    "    fixed_indices = sorted(fixed.keys())\n",
+    "    free_indices = [i for i in range(n) if i not in fixed]\n",
+    "    \n",
+    "    if not free_indices:\n",
+    "        # All coordinates fixed; just compute residual\n",
+    "        x = np.array([fixed[i] for i in range(n)])\n",
+    "        residual = np.linalg.norm(A @ x - b)\n",
+    "        return x, residual, 0\n",
+    "    \n",
+    "    # Move fixed terms to the right-hand side: A_free @ x_free = b - A_fixed @ x_fixed\n",
+    "    A_free = A[:, free_indices]\n",
+    "    A_fixed = A[:, fixed_indices]\n",
+    "    x_fixed = np.array([fixed[i] for i in fixed_indices])\n",
+    "    b_adjusted = b - A_fixed @ x_fixed\n",
+    "    \n",
+    "    # Solve reduced system\n",
+    "    x_free, residuals, rank, _ = np.linalg.lstsq(A_free, b_adjusted, rcond=None)\n",
+    "    \n",
+    "    # Reassemble full solution\n",
+    "    x = np.zeros(n)\n",
+    "    x[fixed_indices] = x_fixed\n",
+    "    x[free_indices] = x_free\n",
+    "    \n",
+    "    residual = np.linalg.norm(A @ x - b)\n",
+    "    \n",
+    "    return x, residual, rank\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6],\n",
+    "              [7, 8, 9]])\n",
+    "\n",
+    "b = np.array([1, 2, 3])\n",
+    "\n",
+    "A = JACOBIAN_ARR\n",
+    "b = np.zeros(A.shape[0])\n",
+    "# Specify that S1 is the step input and so must be 1 on output.\n",
+    "fixed_dct = {0: 1}\n",
+    "\n",
+    "# Solve with x[0] fixed to 0.5\n",
+    "x, residual, rank = solve_linear_system(A, b, fixed=fixed_dct)\n",
+    "\n",
+    "print(f\"Solution: {x}\")\n",
+    "print(f\"Residual: {residual:.2e}\")\n",
+    "print(f\"Rank: {rank}\")\n",
+    "print(f\"Verification A @ x = {A @ x}\")\n",
+    "print(f\"Target b = {b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "39ddfcfc-9dd0-4441-ba04-c6d42254da3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.    ,   0.    ,   0.    ,   0.    ,   0.    ,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  0.    ,  -1.059 ,   0.    ,   0.    ,   0.    ,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  0.    ,   1.0286, -14.0679,   3.0208,   6.9311,   1.7326,\n",
+       "          0.    ],\n",
+       "       [  1.4724,   0.    ,   3.3392,  -6.4247,   2.5701,   0.    ,\n",
+       "          0.    ],\n",
+       "       [  1.4724,   4.7199,   0.    ,   0.    ,  -9.4911,   3.1463,\n",
+       "          0.6854],\n",
+       "       [  3.503 ,   1.6341,   0.    ,   0.    ,   5.9061,  -8.6818,\n",
+       "          0.3427],\n",
+       "       [  0.7699,   0.    ,   1.6696,   1.5104,   2.3909,   0.    ,\n",
+       "         -6.1623]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "JACOBIAN_ARR"
    ]
   }
  ],
